Add a parallax scroll project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Some CSS useful projects</h1>
     <ul>
         <li><a href="./basic3d.html">Basic 3d Transition</a></li>
+        <li><a href="./parallax.html">Parallax Scroll Effect</a></li>
     </ul>
 </body>
 </html>
